[package]
name = "aht21"
version = "0.1.0"
edition = "2024"

license = "MIT OR Apache-2.0"
keywords = ["driver", "sensor", "i2c", "aht21"]
categories = ["embedded", "no-std"]
publish = true

[features]
default = ["sync"]
sync = ["embedded-hal"]
async = ["embedded-hal-async"]

[dependencies]
embedded-hal = {version = "1.0", optional = true}
embedded-hal-async = { version = "1.0", optional = true }
libm = "0.2.15"
log = "0.4.28"
maybe-async-cfg = "0.2.5"
